--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toggle": "^1.1.9",
     "@t3-oss/env-nextjs": "^0.13.6",
     "@tanstack/react-query": "^5.80.6",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "@trpc/client": "^11.3.1",
     "@trpc/next": "^11.3.1",
     "@trpc/react-query": "^11.3.1",
@@ -25,10 +31,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.57.0",
     "tailwind-merge": "^3.3.0",
-    "zod": "^3.25.56"
+    "zod": "^3.25.62"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
