--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "sass": "^1.89.2",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.62",
     "zustand": "^5.0.5"
