--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -21,6 +22,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.50.0",
     "@t3-oss/env-nextjs": "^0.13.6",
     "@tanstack/react-query": "^5.80.6",
@@ -45,8 +47,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
+    "react-intersection-observer": "^9.16.0",
     "sass": "^1.89.2",
     "sonner": "^2.0.5",
+    "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.25.62",
     "zustand": "^5.0.5"
